docker configuration added

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DB_DSN=postgres://postgres:0000@db:5432/subscriptions?sslmode=disable
+POSTGRES_PASSWORD: "0000"
+POSTGRES_USER: "postgres"
+POSTGRES_DB: "subscriptions"
